Make sidebar tooltips respect the "Display informational tooltips" global setting

BUG: 455073
FIXED-IN: 5.24.6


(cherry picked from commit bfe632e97a851540509fb2f54af21ea0511b46e6)